--- a/viewer.ui
+++ b/viewer.ui
@@ -1,11 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<!--
-Regrafusion - draws graphics recursively
-Distributed under GPL-3.0
-Copyright (C) 2023  Vesko Milev
--->
-
 <ui version="4.0">
  <class>viewer</class>
  <widget class="QMainWindow" name="viewer">
@@ -52,7 +45,27 @@ Copyright (C) 2023  Vesko Milev
       <property name="bottomMargin">
        <number>10</number>
       </property>
-      <item row="5" column="0">
+      <item row="4" column="1">
+       <widget class="QSpinBox" name="num_branches_spin_box">
+        <property name="minimum">
+         <number>1</number>
+        </property>
+        <property name="maximum">
+         <number>1000</number>
+        </property>
+        <property name="value">
+         <number>100</number>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0" colspan="2">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Number of branches:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="0">
        <spacer name="verticalSpacer">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
@@ -65,7 +78,21 @@ Copyright (C) 2023  Vesko Milev
         </property>
        </spacer>
       </item>
-      <item row="3" column="0">
+      <item row="1" column="0" colspan="2">
+       <widget class="QPushButton" name="reset_scale_button">
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>Reset view
+scale</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="0">
        <widget class="QSlider" name="num_branches_slider">
         <property name="minimumSize">
          <size>
@@ -107,31 +134,10 @@ to origin</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="0" colspan="2">
-       <widget class="QPushButton" name="reset_scale_button">
-        <property name="text">
-         <string>Reset view
-scale</string>
-        </property>
-       </widget>
-      </item>
       <item row="2" column="0" colspan="2">
-       <widget class="QLabel" name="label">
+       <widget class="QPushButton" name="switch_buffers">
         <property name="text">
-         <string>Number of branches:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1">
-       <widget class="QSpinBox" name="num_branches_spin_box">
-        <property name="minimum">
-         <number>1</number>
-        </property>
-        <property name="maximum">
-         <number>1000</number>
-        </property>
-        <property name="value">
-         <number>100</number>
+         <string>Switch buffers</string>
         </property>
        </widget>
       </item>
