UI: add the rest of the shapes using both DnD and LMB

--- a/icons.qrc
+++ b/icons.qrc
@@ -1,5 +1,8 @@
 <RCC>
 <qresource prefix="/">
     <file>icons/circle.png</file>
+    <file>icons/line.png</file>
+    <file>icons/polygon.png</file>
+    <file>icons/rectangle.png</file>
 </qresource>
 </RCC>
