UI: fix Viewer class capitalisation

--- a/viewer.ui
+++ b/viewer.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>viewer</class>
- <widget class="QMainWindow" name="viewer">
+ <class>Viewer</class>
+ <widget class="QMainWindow" name="Viewer">
   <property name="geometry">
    <rect>
     <x>0</x>
